--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -73,7 +73,7 @@ services:
         - SPRING_PROFILES_ACTIVE=default
         - OAUTH_SERVICE_URL=http://identity:8080
         - REGISTRY_SERVICE_URL=http://civil-servant-registry:9002
-        - LEARNING_CATALOGUE_SERVICE_URL=http://localhost:9001
+        - LEARNING_CATALOGUE_SERVICE_URL=http://learning-catalogue:9001
         - XAPI_URL=http://learning-locker-xapi:8083/data/xAPI
       image: cshr/lpg-learner-record:chore-large-records-139
       depends_on:
