Remove management-ui and update to new domain.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -62,7 +62,7 @@ services:
     container_name: identity
     environment:
       - SPRING_PROFILES_ACTIVE=default
-    image: cshr/identity-service:chore-performance-156
+    image: cshr/identity-service:e4aff54943f71dd6b270b33175606f7884a54ccb
     ports:
       - 8080:8080
       - 8081:8081
@@ -116,17 +116,17 @@ services:
     ports:
       - 9004:9004
 
-  lpg-management:
-      container_name: lpg-management
-      image: cshr/lpg-management-ui:73b8e1ebcd9b8829a3799bd6831a2bac02dda0e2
-      environment:
-        - AUTHENTICATION_SERVICE_URL=http://localhost:8080
-        - LEARNING_CATALOGUE_SERVICE_URL=http://localhost:9001
-        - CALLBACK_URL=http://lpg-management:3005
-      depends_on:
-        - identity
-        - learning-catalogue
-      ports:
-        - 3005:3005
+#  lpg-management:
+#      container_name: lpg-management
+#      image: cshr/lpg-management-ui:73b8e1ebcd9b8829a3799bd6831a2bac02dda0e2
+#      environment:
+#        - AUTHENTICATION_SERVICE_URL=http://localhost:8080
+#        - LEARNING_CATALOGUE_SERVICE_URL=http://localhost:9001
+#        - CALLBACK_URL=http://lpg-management:3005
+#      depends_on:
+#        - identity
+#        - learning-catalogue
+#      ports:
+#        - 3005:3005
 
 # /CSHR
