--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,25 +1,24 @@
-version: "3.4"
+version: '3.4'
 services:
-
-# ElasticSearch
+  # ElasticSearch
   elasticsearch:
     container_name: elasticsearch
     image: docker.elastic.co/elasticsearch/elasticsearch@sha256:5b2bb3e91379f04a9da7c477314a24b2428fb1a4c20696991dff54b70d1b4ef3
     ports:
       - 9200:9200
       - 9300:9300
-    command: "elasticsearch -E cluster.name=local -E discovery.type=single-node"
-# /ElasticSearch
+    command: 'elasticsearch -E cluster.name=local -E discovery.type=single-node'
+  # /ElasticSearch
 
-# Learning Locker
+  # Learning Locker
   learning-locker-api-worker:
-    command: ["node", "/opt/learning-locker/worker/dist/server"]
+    command: ['node', '/opt/learning-locker/worker/dist/server']
     container_name: learning-locker-api-worker
     image: cshr/lpg-learning-locker:fe8104bf2f0fedb8f5af138bd8860a9c27dd2bb12ecb827f09e754e279a70fa8
     working_dir: /opt/learning-locker
 
   learning-locker-ui:
-    command: ["/opt/learning-locker/run-ui.sh"]
+    command: ['/opt/learning-locker/run-ui.sh']
     container_name: learning-locker-ui
     image: cshr/lpg-learning-locker:fe8104bf2f0fedb8f5af138bd8860a9c27dd2bb12ecb827f09e754e279a70fa8
     ports:
@@ -27,7 +26,7 @@ services:
     working_dir: /opt/learning-locker
 
   learning-locker-xapi:
-    command: ["node", "/opt/xapi-service/dist/server"]
+    command: ['node', '/opt/xapi-service/dist/server']
     container_name: learning-locker-xapi
     depends_on:
       - mongodb
@@ -47,16 +46,20 @@ services:
     image: redis@sha256:3446883dfe13ab3db67433aace0e72d8cd669c528e60c617c42d6c697f0fa41f
 
   setup-learning-locker:
-    command: ["/opt/learning-locker/./node_modules/.bin/babel-node", "/opt/learning-locker/mkadmin.js"]
+    command:
+      [
+        '/opt/learning-locker/./node_modules/.bin/babel-node',
+        '/opt/learning-locker/mkadmin.js',
+      ]
     depends_on:
       - mongodb
     environment:
       - NODE_PATH=/opt/learning-locker
     image: cshr/lpg-learning-locker:fe8104bf2f0fedb8f5af138bd8860a9c27dd2bb12ecb827f09e754e279a70fa8
     working_dir: /opt/learning-locker
-# /Learning Locker
+  # /Learning Locker
 
-# CSHR
+  # CSHR
 
   identity:
     container_name: identity
@@ -68,27 +71,38 @@ services:
       - 8081:8081
 
   learner-record:
-      container_name: learner-record
-      environment:
-        - SPRING_PROFILES_ACTIVE=default
-        - OAUTH_SERVICE_URL=http://identity:8080
-        - REGISTRY_SERVICE_URL=http://civil-servant-registry:9002
-        - LEARNING_CATALOGUE_SERVICE_URL=http://learning-catalogue:9001
-        - XAPI_URL=http://learning-locker-xapi:8083/data/xAPI
-      image: cshr/lpg-learner-record:87fbada730d6f6914828739c6c6cf39551f351eb
-      depends_on:
-        - civil-servant-registry
-        - identity
-        - learning-catalogue
-        - learning-locker-xapi
-      ports:
-        - 9000:9000
+    container_name: learner-record
+    environment:
+      - SPRING_PROFILES_ACTIVE=default
+      - OAUTH_SERVICE_URL=http://identity:8080
+      - REGISTRY_SERVICE_URL=http://civil-servant-registry:9002
+      - LEARNING_CATALOGUE_SERVICE_URL=http://learning-catalogue:9001
+      - XAPI_URL=http://learning-locker-xapi:8083/data/xAPI
+    image: cshr/lpg-learner-record:87fbada730d6f6914828739c6c6cf39551f351eb
+    depends_on:
+      - civil-servant-registry
+      - identity
+      - learning-catalogue
+      - learning-locker-xapi
+    ports:
+      - 9000:9000
 
   learning-catalogue:
     container_name: learning-catalogue
-    command: ["./wait-for-it.sh", "elasticsearch:9300", "-t", "200", "--", "java", "-jar", "/data/app.jar"]
+    command:
+      [
+        './wait-for-it.sh',
+        'elasticsearch:9300',
+        '-t',
+        '200',
+        '--',
+        'java',
+        '-jar',
+        '/data/app.jar',
+      ]
     environment:
       - OAUTH_SERVICE_URL=http://identity:8080
+      - ELASTICSEARCH_URI=http://elasticsearch:9200
     image: cshr/lpg-learning-catalogue:7a9a6b68d989bfb699d98471790ca4c5fa4078ff
     depends_on:
       - identity
@@ -96,15 +110,15 @@ services:
       - 9001:9001
 
   civil-servant-registry:
-      container_name: civil-servant-registry
-      environment:
-        - SPRING_PROFILES_ACTIVE=default
-        - OAUTH_SERVICE_URL=http://identity:8080
-      image: cshr/civil-servant-registry-service:cf02713eeec22f2b4bdf70fb7e02aa3074f713c4
-      depends_on:
-        - identity
-      ports:
-        - 9002:9002
+    container_name: civil-servant-registry
+    environment:
+      - SPRING_PROFILES_ACTIVE=default
+      - OAUTH_SERVICE_URL=http://identity:8080
+    image: cshr/civil-servant-registry-service:cf02713eeec22f2b4bdf70fb7e02aa3074f713c4
+    depends_on:
+      - identity
+    ports:
+      - 9002:9002
 
   report-service:
     container_name: report-service
