--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,13 +14,13 @@ services:
   learning-locker-api-worker:
     command: ['node', '/opt/learning-locker/worker/dist/server']
     container_name: learning-locker-api-worker
-    image: cshr/lpg-learning-locker:fe8104bf2f0fedb8f5af138bd8860a9c27dd2bb12ecb827f09e754e279a70fa8
+    image: lpgregistry.azurecr.io/lpg-learning-locker:fe8104bf2f0fedb8f5af138bd8860a9c27dd2bb12ecb827f09e754e279a70fa8
     working_dir: /opt/learning-locker
 
   learning-locker-ui:
     command: ['/opt/learning-locker/run-ui.sh']
     container_name: learning-locker-ui
-    image: cshr/lpg-learning-locker:fe8104bf2f0fedb8f5af138bd8860a9c27dd2bb12ecb827f09e754e279a70fa8
+    image: lpgregistry.azurecr.io/lpg-learning-locker:fe8104bf2f0fedb8f5af138bd8860a9c27dd2bb12ecb827f09e754e279a70fa8
     ports:
       - 3000:3000
     working_dir: /opt/learning-locker
@@ -32,7 +32,7 @@ services:
       - mongodb
       - redis
       - learning-locker-api-worker
-    image: cshr/lpg-learning-locker:fe8104bf2f0fedb8f5af138bd8860a9c27dd2bb12ecb827f09e754e279a70fa8
+    image: lpgregistry.azurecr.io/lpg-learning-locker:fe8104bf2f0fedb8f5af138bd8860a9c27dd2bb12ecb827f09e754e279a70fa8
     ports:
       - 8083:8083
     working_dir: /opt/xapi-service
@@ -55,17 +55,16 @@ services:
       - mongodb
     environment:
       - NODE_PATH=/opt/learning-locker
-    image: cshr/lpg-learning-locker:fe8104bf2f0fedb8f5af138bd8860a9c27dd2bb12ecb827f09e754e279a70fa8
+    image: lpgregistry.azurecr.io/lpg-learning-locker:fe8104bf2f0fedb8f5af138bd8860a9c27dd2bb12ecb827f09e754e279a70fa8
     working_dir: /opt/learning-locker
   # /Learning Locker
 
   # CSHR
-
   identity:
     container_name: identity
     environment:
       - SPRING_PROFILES_ACTIVE=default
-    image: cshr/identity-service:71a58031b9a7b6b7f30ac7d29a2b03a796192fba
+    image: lpgregistry.azurecr.io/identity-service:fix-update-ci-175
     ports:
       - 8080:8080
       - 8081:8081
@@ -78,7 +77,7 @@ services:
       - REGISTRY_SERVICE_URL=http://civil-servant-registry:9002
       - LEARNING_CATALOGUE_SERVICE_URL=http://learning-catalogue:9001
       - XAPI_URL=http://learning-locker-xapi:8083/data/xAPI
-    image: cshr/lpg-learner-record:56a379ce040687b3fb41b9fa993b680e18942f30
+    image: lpgregistry.azurecr.io/lpg-learner-record:PR-40-2
     depends_on:
       - civil-servant-registry
       - identity
@@ -103,7 +102,7 @@ services:
     environment:
       - OAUTH_SERVICE_URL=http://identity:8080
       - ELASTICSEARCH_URI=http://elasticsearch:9200
-    image: cshr/lpg-learning-catalogue:775b2eb8a4232ddc0dfad011644dcd80f856b182
+    image: lpgregistry.azurecr.io/lpg-learning-catalogue:PR-51-3
     depends_on:
       - identity
     ports:
@@ -114,7 +113,7 @@ services:
     environment:
       - SPRING_PROFILES_ACTIVE=default
       - OAUTH_SERVICE_URL=http://identity:8080
-    image: cshr/civil-servant-registry-service:fc2ff2f6fc53be91d56900ec17ba0b7a101b85dd
+    image: lpgregistry.azurecr.io/civil-servant-registry-service:fc2ff2f6fc53be91d56900ec17ba0b7a101b85dd
     depends_on:
       - identity
     ports:
@@ -125,11 +124,10 @@ services:
     environment:
       - OAUTH_SERVICE_URL=http://identity:8080
       - LEARNER_RECORD_URL=http://learner-record:9000
-    image: cshr/lpg-report-service:feature-lpfg-370-booking-feed-csv-report-4
+    image: lpgregistry.azurecr.io/lpg-report-service:feature-lpfg-370-booking-feed-csv-report-4
     depends_on:
       - identity
       - learner-record
     ports:
       - 9004:9004
-
 # /CSHR
