LPFG-921: updating id image

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -64,7 +64,7 @@ services:
     container_name: identity
     environment:
       - SPRING_PROFILES_ACTIVE=default
-    image: lpgregistry.azurecr.io/identity-service:fix-update-ci-175
+    image: lpgregistry.azurecr.io/identity-service:3a5c890d32248bc6abcf8e4b4c1fa35d8226097c
     ports:
       - 8080:8080
       - 8081:8081
@@ -102,7 +102,7 @@ services:
     environment:
       - OAUTH_SERVICE_URL=http://identity:8080
       - ELASTICSEARCH_URI=http://elasticsearch:9200
-    image: lpgregistry.azurecr.io/lpg-learning-catalogue:PR-51-3
+    image: lpgregistry.azurecr.io/lpg-learning-catalogue:PR-58-5
     depends_on:
       - identity
     ports:
