--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
 	},
 	"dependencies": {
 		"app-root-path": "^2.1.0",
-		"applicationinsights": "^1.0.6",
+		"applicationinsights": "1.0.6",
 		"axios": "0.17.1",
 		"azure-storage": "2.8.1",
 		"compression": "1.7.1",
