LPFG-936: updating docker-compose

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -113,7 +113,7 @@ services:
     environment:
       - SPRING_PROFILES_ACTIVE=default
       - OAUTH_SERVICE_URL=http://identity:8080
-    image: lpgregistry.azurecr.io/civil-servant-registry-service:fc2ff2f6fc53be91d56900ec17ba0b7a101b85dd
+    image: lpgregistry.azurecr.io/civil-servant-registry-service:PR-34-2
     depends_on:
       - identity
     ports:
