LPFG-989: Added bookEvent function to learner record

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,13 @@
 version: '3.4'
 services:
+
+  mysql:
+    image: mysql:5.6
+    environment:
+    - MYSQL_ROOT_PASSWORD=password
+    ports:
+    - 3306:3306
+
   # ElasticSearch
   elasticsearch:
     container_name: elasticsearch
