--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"@types/google-protobuf": "3.2.7",
 		"@types/helmet": "0.0.37",
 		"@types/i18n": "0.8.3",
+		"@types/lodash": "4.14.119",
 		"@types/lusca": "1.5.0",
 		"@types/mime-types": "2.1.0",
 		"@types/mocha": "^5.2.3",
@@ -62,6 +63,7 @@
 		"applicationinsights": "1.0.6",
 		"axios": "0.17.1",
 		"azure-storage": "2.8.1",
+		"class-validator": "0.9.1",
 		"compression": "1.7.1",
 		"connect-flash": "0.1.1",
 		"cors": "2.8.4",
@@ -79,6 +81,7 @@
 		"govuk_frontend_toolkit": "7.2.0",
 		"helmet": "3.12.0",
 		"i18n": "0.8.3",
+		"lodash": "^4.17.11",
 		"log4js": "2.5.2",
 		"lusca": "1.5.2",
 		"mime-types": "2.1.18",
