--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 	"devDependencies": {
 		"@types/app-root-path": "^1.2.4",
 		"@types/chai": "^4.1.4",
+		"@types/chai-as-promised": "7.1.0",
 		"@types/cheerio": "^0.22.8",
 		"@types/compression": "0.0.35",
 		"@types/connect-flash": "0.0.34",
@@ -41,22 +42,30 @@
 		"@types/request": "2.47.0",
 		"@types/session-file-store": "1.2.0",
 		"@types/shortid": "0.0.29",
+		"@types/sinon": "5.0.1",
+		"@types/sinon-chai": "3.2.0",
+		"@types/sinon-express-mock": "^1.3.7",
 		"@types/supertest": "^2.0.4",
 		"@types/tmp": "0.0.33",
 		"@types/traverson": "2.0.28",
 		"@types/unzip": "0.1.0",
 		"@types/xml2js": "0.4.2",
 		"chai": "^4.1.2",
+		"chai-as-promised": "7.1.1",
 		"cheerio": "^1.0.0-rc.2",
 		"csv": "2.0.0",
 		"make-runnable": "1.3.6",
 		"mocha": "^5.2.0",
 		"nodemon": "1.14.12",
 		"proxyquire": "^2.0.1",
+		"sinon": "6.1.2",
+		"sinon-chai": "3.2.0",
+		"sinon-express-mock": "2.0.4",
 		"slugid": "1.1.0",
 		"supertest": "^3.1.0",
+		"ts-node-register": "^1.0.0",
 		"tslint": "5.9.1",
-		"typescript": "2.7.1"
+		"typescript": "2.9.2"
 	},
 	"dependencies": {
 		"app-root-path": "^2.1.0",
