--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -64,7 +64,7 @@ services:
     container_name: identity
     environment:
       - SPRING_PROFILES_ACTIVE=default
-    image: lpgregistry.azurecr.io/identity-service:3e9689f276f0e1d068eca895a91886099324aae1
+    image: lpgregistry.azurecr.io/identity-service:master-25
     ports:
       - 8080:8080
       - 8081:8081
@@ -77,7 +77,7 @@ services:
       - REGISTRY_SERVICE_URL=http://civil-servant-registry:9002
       - LEARNING_CATALOGUE_SERVICE_URL=http://learning-catalogue:9001
       - XAPI_URL=http://learning-locker-xapi:8083/data/xAPI
-    image: lpgregistry.azurecr.io/lpg-learner-record:PR-76-2
+    image: lpgregistry.azurecr.io/lpg-learner-record:master-41
     depends_on:
       - civil-servant-registry
       - identity
@@ -102,7 +102,7 @@ services:
     environment:
       - OAUTH_SERVICE_URL=http://identity:8080
       - ELASTICSEARCH_URI=http://elasticsearch:9200
-    image: lpgregistry.azurecr.io/lpg-learning-catalogue:PR-80-1
+    image: lpgregistry.azurecr.io/lpg-learning-catalogue:master-36
     depends_on:
       - identity
     ports:
@@ -113,7 +113,7 @@ services:
     environment:
       - SPRING_PROFILES_ACTIVE=default
       - OAUTH_SERVICE_URL=http://identity:8080
-    image: lpgregistry.azurecr.io/civil-servant-registry-service:PR-43-13
+    image: lpgregistry.azurecr.io/civil-servant-registry-service:master-16
     depends_on:
       - identity
     ports:
@@ -124,7 +124,7 @@ services:
     environment:
       - OAUTH_SERVICE_URL=http://identity:8080
       - LEARNER_RECORD_URL=http://learner-record:9000
-    image: lpgregistry.azurecr.io/lpg-report-service:feature-lpfg-370-booking-feed-csv-report-4
+    image: lpgregistry.azurecr.io/lpg-report-service:master-5
     depends_on:
       - identity
       - learner-record
