--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -64,7 +64,7 @@ services:
     container_name: identity
     environment:
       - SPRING_PROFILES_ACTIVE=default
-    image: lpgregistry.azurecr.io/identity-service:master-25
+    image: lpgregistry.azurecr.io/identity-service:master-29
     ports:
       - 8080:8080
       - 8081:8081
@@ -113,7 +113,7 @@ services:
     environment:
       - SPRING_PROFILES_ACTIVE=default
       - OAUTH_SERVICE_URL=http://identity:8080
-    image: lpgregistry.azurecr.io/civil-servant-registry-service:master-16
+    image: lpgregistry.azurecr.io/civil-servant-registry-service:PR-48-2
     depends_on:
       - identity
     ports:
