--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -64,7 +64,7 @@ services:
     container_name: identity
     environment:
       - SPRING_PROFILES_ACTIVE=default
-    image: lpgregistry.azurecr.io/identity-service:master-29
+    image: lpgregistry.azurecr.io/identity-service:master-31
     ports:
       - 8080:8080
       - 8081:8081
@@ -77,7 +77,7 @@ services:
       - REGISTRY_SERVICE_URL=http://civil-servant-registry:9002
       - LEARNING_CATALOGUE_SERVICE_URL=http://learning-catalogue:9001
       - XAPI_URL=http://learning-locker-xapi:8083/data/xAPI
-    image: lpgregistry.azurecr.io/lpg-learner-record:master-41
+    image: lpgregistry.azurecr.io/lpg-learner-record:PR-68-6
     depends_on:
       - civil-servant-registry
       - identity
@@ -102,7 +102,8 @@ services:
     environment:
       - OAUTH_SERVICE_URL=http://identity:8080
       - ELASTICSEARCH_URI=http://elasticsearch:9200
-    image: lpgregistry.azurecr.io/lpg-learning-catalogue:master-36
+      - REGISTRY_SERVICE_URL=http://civil-servant-registry:9002
+    image: lpgregistry.azurecr.io/lpg-learning-catalogue:PR-72-3
     depends_on:
       - identity
     ports:
@@ -124,7 +125,8 @@ services:
     environment:
       - OAUTH_SERVICE_URL=http://identity:8080
       - LEARNER_RECORD_URL=http://learner-record:9000
-    image: lpgregistry.azurecr.io/lpg-report-service:master-5
+      - REGISTRY_SERVICE_URL=http://civil-servant-registry:9002
+    image: lpgregistry.azurecr.io/lpg-report-service:master-7
     depends_on:
       - identity
       - learner-record
