--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,5 +20,6 @@
 		"strictNullChecks": true,
 		"target": "ESNext"
 	},
-	"include": ["src/**/*"]
+	"include": ["src/**/*"],
+	"exclude": ["node_modules"]
 }
