--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,8 @@
 		"target": "ESNext"
 	},
 	"include": ["src/**/*"],
-	"exclude": ["node_modules"]
+    "exclude": [
+      "node_modules/**/*",
+      "**/*.d.ts"
+    ]
 }
