--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,6 @@
 	},
 	"include": ["src/**/*"],
     "exclude": [
-      "node_modules/**/*",
-      "**/*.d.ts"
+      "node_modules/**/*"
     ]
 }
