--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,8 @@
 	},
 	"include": ["src/**/*"],
     "exclude": [
-      "node_modules/**/*"
-    ]
+		"node_modules/typescript/lib/lib.es2017.sharedmemory.d.ts",
+		"node_modules/typescript/lib/lib.es2017.sharedmemory.d.ts",
+		"node_modules/@types/node/index.d.ts"
+	]
 }
