--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,9 +20,5 @@
 		"strictNullChecks": true,
 		"target": "ESNext"
 	},
-	"include": ["src/**/*"],
-	"exclude": [
-		"node_modules",
-		"typings"
-	]
+	"include": ["src/**/*"]
 }
