--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
 		"sourceMap": true,
 		"strictFunctionTypes": true,
 		"strictNullChecks": true,
-		"target": "ESNext"
+		"target": "ES6"
 	},
 	"include": ["src/**/*"]
 }
