--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
 		"sourceMap": true,
 		"strictFunctionTypes": true,
 		"strictNullChecks": true,
-		"target": "ES6"
+		"target": "ESNext",
+		"skipLibCheck": true
 	},
 	"include": ["src/**/*"]
 }
