added skip link to all pages

--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
 		"app-root-path": "^2.1.0",
 		"applicationinsights": "1.0.6",
 		"axios": "0.18.1",
-		"azure-storage": "2.8.1",
+		"azure-storage": "^2.10.3",
 		"class-validator": "0.9.1",
 		"compression": "1.7.1",
 		"connect-flash": "0.1.1",
@@ -94,15 +94,16 @@
 		"log4js": "2.5.2",
 		"lusca": "1.5.2",
 		"mime-types": "2.1.18",
+		"moment": "^2.24.0",
 		"node-exiftool": "2.3.0",
 		"node-fetch": "1.7.3",
-		"node-sass": "4.9.0",
-		"notifications-node-client": "4.1.0",
+		"node-sass": "^4.12.0",
+		"notifications-node-client": "^4.6.0",
 		"passport": "0.4.0",
 		"passport-oauth2": "1.4.0",
 		"passport-saml": "0.32.1",
 		"protobufjs": "6.8.6",
-		"request": "2.83.0",
+		"request": "^2.88.0",
 		"request-promise": "4.2.2",
 		"serve-favicon": "2.4.5",
 		"session-file-store": "1.2.0",
@@ -110,7 +111,7 @@
 		"striptags": "3.1.1",
 		"svelte": "2.6.3",
 		"tmp": "0.0.33",
-		"traverson": "6.0.3",
+		"traverson": "^6.1.1",
 		"traverson-hal": "6.0.0",
 		"unzip": "0.1.11"
 	}
