--- a/package.json
+++ b/package.json
@@ -97,8 +97,8 @@
 		"moment": "^2.24.0",
 		"node-exiftool": "2.3.0",
 		"node-fetch": "1.7.3",
-		"node-sass": "4.1.0",
-		"notifications-node-client": "^4.6.0",
+		"node-sass": "4.9.0",
+		"notifications-node-client": "4.1.0",
 		"passport": "0.4.0",
 		"passport-oauth2": "1.4.0",
 		"passport-saml": "0.32.1",
