--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,14 @@
 version: '3.4'
 services:
+  mysql:
+    image: mysql
+    command: --default-authentication-plugin=mysql_native_password
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: password
+    ports:
+        - 3306:3306
+
   # ElasticSearch
   elasticsearch:
     container_name: elasticsearch
@@ -79,7 +88,7 @@ services:
       - REGISTRY_SERVICE_URL=http://civil-servant-registry:9002
       - LEARNING_CATALOGUE_SERVICE_URL=http://learning-catalogue:9001
       - XAPI_URL=http://learning-locker-xapi:8083/data/xAPI
-    image: lpgregistry.azurecr.io/lpg-learner-record:master-64
+    image: lpgregistry.azurecr.io/lpg-learner-record:master-65
     depends_on:
       - civil-servant-registry
       - identity
@@ -105,7 +114,7 @@ services:
       - OAUTH_SERVICE_URL=http://identity:8080
       - ELASTICSEARCH_URI=http://elasticsearch:9200
       - REGISTRY_SERVICE_URL=http://civil-servant-registry:9002
-    image: lpgregistry.azurecr.io/lpg-learning-catalogue:master-58
+    image: lpgregistry.azurecr.io/lpg-learning-catalogue:master-59
     depends_on:
       - identity
     ports:
@@ -116,7 +125,7 @@ services:
     environment:
       - SPRING_PROFILES_ACTIVE=default
       - OAUTH_SERVICE_URL=http://identity:8080
-    image: lpgregistry.azurecr.io/civil-servant-registry-service:master-31
+    image: lpgregistry.azurecr.io/civil-servant-registry-service:master-32
     depends_on:
       - identity
     ports:
