--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
 		"watch-sass:ui": "node-sass -w -r src/ui/assets/styles -o dist/ui/assets/styles --output-style compressed"
 	},
 	"devDependencies": {
-		"@types/app-root-path": "1.2.4",
-		"@types/chai": "4.1.4",
+		"@types/app-root-path": "^1.2.4",
+		"@types/chai": "^4.1.4",
 		"@types/chai-as-promised": "7.1.0",
-		"@types/cheerio": "0.22.8",
+		"@types/cheerio": "^0.22.8",
 		"@types/compression": "0.0.35",
 		"@types/connect-flash": "0.0.34",
 		"@types/cors": "2.8.3",
@@ -35,40 +35,41 @@
 		"@types/lodash": "4.14.119",
 		"@types/lusca": "1.5.0",
 		"@types/mime-types": "2.1.0",
-		"@types/mocha": "5.2.3",
+		"@types/mocha": "^5.2.3",
 		"@types/node-fetch": "1.6.7",
 		"@types/passport": "0.4.2",
-		"@types/proxyquire": "1.3.28",
+		"@types/proxyquire": "^1.3.28",
 		"@types/request": "2.47.0",
 		"@types/session-file-store": "1.2.0",
 		"@types/shortid": "0.0.29",
 		"@types/sinon": "5.0.1",
 		"@types/sinon-chai": "3.2.0",
-		"@types/sinon-express-mock": "1.3.7",
-		"@types/supertest": "2.0.4",
+		"@types/sinon-express-mock": "^1.3.7",
+		"@types/supertest": "^2.0.4",
 		"@types/tmp": "0.0.33",
 		"@types/traverson": "2.0.28",
 		"@types/unzip": "0.1.0",
 		"@types/xml2js": "0.4.2",
-		"chai": "4.1.2",
+		"chai": "^4.1.2",
 		"chai-as-promised": "7.1.1",
-		"cheerio": "1.0.0-rc.2",
+		"cheerio": "^1.0.0-rc.2",
 		"csv": "2.0.0",
 		"make-runnable": "1.3.6",
-		"mocha": "5.2.0",
+		"mocha": "^5.2.0",
 		"nodemon": "1.14.12",
-		"proxyquire": "2.0.1",
+		"proxyquire": "^2.0.1",
 		"sinon": "6.1.2",
 		"sinon-chai": "3.2.0",
 		"sinon-express-mock": "2.0.4",
 		"slugid": "1.1.0",
-		"supertest": "3.1.0",
-		"ts-node-register": "1.0.0",
+		"supertest": "^3.1.0",
+		"ts-node-register": "^1.0.0",
 		"tslint": "5.9.1",
 		"typescript": "2.9.2"
 	},
 	"dependencies": {
-		"app-root-path": "2.1.0",
+		"@types/superagent": "3.8.2",
+		"app-root-path": "^2.1.0",
 		"applicationinsights": "1.0.6",
 		"axios": "0.18.1",
 		"azure-storage": "2.8.1",
@@ -85,12 +86,12 @@
 		"express-session": "1.15.6",
 		"express-validator": "4.3.0",
 		"full-icu": "1.2.0",
-		"glob": "7.1.2",
+		"glob": "^7.1.2",
 		"govuk-elements-sass": "3.1.2",
 		"govuk_frontend_toolkit": "7.2.0",
 		"helmet": "3.12.0",
 		"i18n": "0.8.3",
-		"lodash": "4.17.11",
+		"lodash": "^4.17.11",
 		"log4js": "2.5.2",
 		"lusca": "1.5.2",
 		"mime-types": "2.1.18",
