--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"@types/sinon": "5.0.1",
 		"@types/sinon-chai": "3.2.0",
 		"@types/sinon-express-mock": "^1.3.7",
+		"@types/superagent": "3.8.2",
 		"@types/supertest": "^2.0.4",
 		"@types/tmp": "0.0.33",
 		"@types/traverson": "2.0.28",
