--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"compile": "./bin/tsc",
 		"dev:ui": "npm run watch & npm run watch-sass:ui & npm run start:ui & wait",
 		"lint": "tslint --project tsconfig.json",
+		"lint-fix": "tslint --fix --project tsconfig.json",
 		"lint:headless": "tslint --project test/headless/tsconfig.json",
 		"lint:webdriver": "tslint --project test/webdriver/tsconfig.json",
 		"nuke": "rm -rf dist node_modules",
