--- a/package.json
+++ b/package.json
@@ -65,8 +65,8 @@
 		"slugid": "1.1.0",
 		"supertest": "^3.1.0",
 		"ts-node-register": "^1.0.0",
-		"tslint": "5.9.1",
-		"typescript": "2.9.2"
+		"tslint": "^5.9.1",
+		"typescript": "^2.9.2"
 	},
 	"dependencies": {
 		"@types/connect-redis": "0.0.11",
