--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 *.log
+*.iml
 .DS_Store
 .env
 .idea
@@ -6,7 +7,6 @@
 .sessions
 dist/
 node_modules/
-package-lock.json
 pyhome/
 src/management-ui/assets/styles/main.css
 src/ui/assets/styles/main.css
