--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"@types/google-protobuf": "3.2.7",
 		"@types/helmet": "0.0.37",
 		"@types/i18n": "0.8.3",
+		"@types/jsonwebtoken": "8.5.0",
 		"@types/lodash": "4.14.119",
 		"@types/lusca": "1.5.0",
 		"@types/mime-types": "2.1.0",
@@ -94,6 +95,7 @@
 		"govuk_frontend_toolkit": "7.2.0",
 		"helmet": "3.12.0",
 		"i18n": "0.8.3",
+		"jsonwebtoken": "8.5.1",
 		"lodash": "^4.17.11",
 		"log4js": "2.5.2",
 		"lusca": "1.5.2",
